--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body{
-    font-family: Lexend;
+    font-family: Lexend, sans-serif; 
 }
 
 footer{
@@ -11,7 +11,7 @@ footer{
 }
 
 #footerText{
-    font-family: Lexend;
+    font-family: Lexend, sans-serif;
     color:aliceblue;
 }
 
@@ -28,6 +28,44 @@ footer{
    }
 
 #movieTitle{
-    font-family: Lexend;
+    font-family: Lexend, sans-serif;
     font-size: 20px;
 }
+
+/* Styling for the "EDIT" button */
+#editProfileButton {
+    background-color: #3490dc;
+    color: #fff;
+    padding: 0.5rem 1rem;
+    border-radius: 0.25rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-bottom: 1rem; /* Add margin to the bottom */
+
+  }
+  
+  #editProfileButton:hover {
+    background-color: #2779bd;
+  }
+
+    /* Styling for the USER PROFILE */
+
+    .fields-container {
+        display: flex;
+        flex-direction: column;
+        margin-top: 1rem;
+      }
+      
+      .field {
+        background-color: #fff;
+        border: 1px solid #ccc;
+        padding: 1rem;
+        margin-bottom: 1rem;
+      }
+      
+      .field label {
+        font-weight: bold;
+        margin-bottom: 0.5rem;
+      }
+      
+  
